<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trending Round</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- Menu strings -->
    <string name="menu_wordpress_posts">Wordpress Posts</string>
    <string name="menu_blogspot_posts">Blogspot Posts</string>
    <string name="menu_settings">Settings</string>


    <!-- Settings screen -->
    <string name="settings__title">Social settings</string>
    <string name="settings_follow_section">Follow</string>
    <string name="settings_googleplus_description">Google+</string>
    <string name="settings_googleplus_status_connected">Connected</string>
    <string name="settings_facebook_follow">Follow me on Facebook</string>
    <string name="settings_twitter_follow">Follow me on Twitter</string>
    <string name="settings_instagram_follow">Follow me on Instagram</string>
    <string name="settings_blogger_follow">Follow me on Blogger</string>
    <string name="settings_contact_link">Contact me!</string>
    
    <string name="contact_email_text">Contact info</string>
    
    <!-- Validation -->
    <string name="no_internet_connection">No internet connection!</string>

</resources>
