<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/posts_lists_background_color"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/posts_list_background_shape"
        android:orientation="vertical"
        android:padding="10dp" >

		<TextView
            android:id="@+id/fs_follow"
            style="@style/PostsListRowText1"
            android:text="@string/settings_follow_section" />
		
		<include layout="@layout/view_vertical_separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/fs_facebook_follow_desc"
                    style="@style/PostsListRowText2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tr_list_row_height2"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/settings_facebook_follow" />

                <ImageView
                    android:id="@+id/fs_facebook_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:src="@drawable/facebook_icon" />
            </LinearLayout>

            <include layout="@layout/view_vertical_separator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/fs_twitter_follow_desc"
                    style="@style/PostsListRowText2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tr_list_row_height2"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/settings_twitter_follow" />

                <ImageView
                    android:id="@+id/fs_twitter_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:src="@drawable/twitter_icon" />
            </LinearLayout>

            <include layout="@layout/view_vertical_separator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/fs_instagram_follow_desc"
                    style="@style/PostsListRowText2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tr_list_row_height2"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/settings_instagram_follow" />

                <ImageView
                    android:id="@+id/fs_instagram_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:src="@drawable/instagram_icon" />
            </LinearLayout>

            <include layout="@layout/view_vertical_separator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/fs_blogger_follow_desc"
                    style="@style/PostsListRowText2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tr_list_row_height2"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/settings_blogger_follow" />

                <ImageView
                    android:id="@+id/fs_blogger_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:src="@drawable/blogger_icon" />
            </LinearLayout>

            <include layout="@layout/view_vertical_separator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/fs_contact_link_desc"
                    style="@style/PostsListRowText2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tr_list_row_height2"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/settings_contact_link" />

                <ImageView
                    android:id="@+id/fs_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:src="@drawable/email_icon" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>